[package]
name = "async-mutex"
version = "1.1.2"
authors = ["Stjepan Glavina <stjepang@gmail.com>"]
edition = "2018"
description = "Async mutex"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/stjepang/async-mutex"
homepage = "https://github.com/stjepang/async-mutex"
documentation = "https://docs.rs/async-mutex"
keywords = ["asynchronous", "mutex", "lock", "synchronization"]
categories = ["asynchronous", "concurrency"]
readme = "README.md"

[dependencies]
event-listener = "1.2.0"

[dev-dependencies]
async-std = "1.6.0"
futures = "0.3.5"
futures-intrusive = "0.3.1"
smol = "0.1.10"
tokio = { version = "0.2.21", features = ["sync", "parking_lot"] }
